# libmlocknice

./: AUTHORS  Makefile.am  NEWS  README  configure.ac
debian/: changelog  control  copyright  libmlocknice-dev.install  rules
src/: Makefile.am  mlocknice.c  mlocknice.h
